feat: add main component

--- a/apps/image-resize-kun/src/app/app.component.html
+++ b/apps/image-resize-kun/src/app/app.component.html
@@ -1,1 +1,4 @@
-<image-resize-kun-header></image-resize-kun-header>
+<div class='max-w-screen-lg'>
+  <image-resize-kun-header></image-resize-kun-header>
+  <image-resize-kun-main></image-resize-kun-main>
+</div>
