feat: image read and display image

--- a/apps/image-resize-kun/src/app/components/image/image.component.html
+++ b/apps/image-resize-kun/src/app/components/image/image.component.html
@@ -1,5 +1,10 @@
-<label class='flex w-1/3 h-40 justify-center items-center border border-gray-800 border-dashed'>
-  画像アップロード
-  <input class='hidden' type='file' accept='image/svg+xml,image/gif,image/jpeg,image/png' multiple
-         (change)='onChangeImage($event)'>
-</label>
+<ng-container *ngIf='imageSrc; else ImageUploadForm'>
+  <img [src]='imageSrc' alt='upload image' />
+</ng-container>
+<ng-template #ImageUploadForm>
+  <label class='flex w-1/3 h-40 justify-center items-center border border-gray-800 border-dashed'>
+    画像アップロード
+    <input class='hidden' type='file' accept='image/svg+xml,image/gif,image/jpeg,image/png' multiple
+           (change)='onChangeImage($event)'>
+  </label>
+</ng-template>
