--- a/apps/image-resize-kun/src/app/app.component.html
+++ b/apps/image-resize-kun/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class='max-w-screen-lg'>
+<div class='max-w-screen-lg flex-1 mx-auto'>
   <image-resize-kun-header></image-resize-kun-header>
   <image-resize-kun-main></image-resize-kun-main>
 </div>
