--- a/apps/image-resize-kun/src/app/components/image/image.component.html
+++ b/apps/image-resize-kun/src/app/components/image/image.component.html
@@ -6,7 +6,7 @@
   </div>
 </ng-container>
 <ng-template #ImageUploadForm>
-  <label class='flex w-1/3 h-40 justify-center items-center border border-gray-800 border-dashed'>
+  <label class='flex w-1/3 h-40 mt-2 justify-center items-center border border-gray-800 border-dashed'>
     画像アップロード
     <input class='hidden' type='file' accept='image/svg+xml,image/gif,image/jpeg,image/png' multiple
            (change)='onChangeImage($event)'>
