--- a/apps/image-resize-kun/src/app/components/main/main.component.html
+++ b/apps/image-resize-kun/src/app/components/main/main.component.html
@@ -1,4 +1,8 @@
 <main>
-  <p class='text-gray-700'>画像をアップロードしてください。</p>
-  <image-resize-kun-image></image-resize-kun-image>
+  <section>
+    <p class='text-gray-900 text-xl'>画像をアップロードしてください</p>
+    <div class='w-full'>
+      <image-resize-kun-image></image-resize-kun-image>
+    </div>
+  </section>
 </main>
