--- a/apps/image-resize-kun/src/app/components/image/image.component.html
+++ b/apps/image-resize-kun/src/app/components/image/image.component.html
@@ -1,14 +1,6 @@
 <ng-container *ngIf='compareList.length > 0; else ImageUploadForm'>
-  <div *ngFor='let compareItem of compareList; index as i'>
-    before image
-    <img [src]='compareItem.inputDataUrl' [alt]='"upload image" + i' />
-    <img [src]='compareItem.resizedDataUrl' [alt]='"resized image" + i' />
-  </div>
+  <image-resize-kun-resize-image-list [compareList]='compareList'></image-resize-kun-resize-image-list>
 </ng-container>
 <ng-template #ImageUploadForm>
-  <label class='flex w-1/3 h-40 mt-2 justify-center items-center border border-gray-800 border-dashed'>
-    画像アップロード
-    <input class='hidden' type='file' accept='image/svg+xml,image/gif,image/jpeg,image/png' multiple
-           (change)='onChangeImage($event)'>
-  </label>
+  <image-resize-kun-image-upload (event)='uploadImage($event)'></image-resize-kun-image-upload>
 </ng-template>
