--- a/apps/image-resize-kun/src/app/components/main/main.component.html
+++ b/apps/image-resize-kun/src/app/components/main/main.component.html
@@ -1,4 +1,3 @@
-<main>
-  <p class='text-gray-700'>画像をアップロードしてください。</p>
+<main class='w-full'>
   <image-resize-kun-image></image-resize-kun-image>
 </main>
