--- a/apps/image-resize-kun/src/app/components/image/image.component.html
+++ b/apps/image-resize-kun/src/app/components/image/image.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf='compareList.length > 0; else ImageUploadForm'>
+  <image-resize-kun-resize-range-slider-component></image-resize-kun-resize-range-slider-component>
   <image-resize-kun-resize-image-list [compareList]='compareList'></image-resize-kun-resize-image-list>
 </ng-container>
 <ng-template #ImageUploadForm>
