--- a/apps/image-resize-kun/src/app/components/image/image.component.html
+++ b/apps/image-resize-kun/src/app/components/image/image.component.html
@@ -1,6 +1,7 @@
-<ng-container *ngIf='compareList.length > 0; else ImageUploadForm'>
-  <image-resize-kun-resize-image-list [compareList]='compareList'></image-resize-kun-resize-image-list>
+<ng-container *ngIf='(readImageList$ | async)?.length || 0 > 0; else ImageUploadForm'>
+  <image-resize-kun-resize-range-slider-component></image-resize-kun-resize-range-slider-component>
+  <image-resize-kun-resize-image-list></image-resize-kun-resize-image-list>
 </ng-container>
 <ng-template #ImageUploadForm>
-  <image-resize-kun-image-upload (event)='uploadImage($event)'></image-resize-kun-image-upload>
+  <image-resize-kun-image-upload></image-resize-kun-image-upload>
 </ng-template>
