--- a/apps/image-resize-kun/src/app/components/image/components/resize-image-list/resize-image-list.component.html
+++ b/apps/image-resize-kun/src/app/components/image/components/resize-image-list/resize-image-list.component.html
@@ -1,10 +1,10 @@
-<div *ngFor='let compareItem of compareList; index as i'>
+<div *ngFor='let displayItem of (displayList$ | async); index as i'>
   <section>
     <h1 class='text-gray-900 text-xl font-bold'>変換前画像</h1>
-    <img class='border border-gray-800' [src]='compareItem.inputDataUrl' [alt]='"upload image" + i' />
+    <img class='border border-gray-800' [src]='displayItem.inputDataUrl' [alt]='"upload image" + i' />
   </section>
   <section class='mt-4'>
     <h1 class='text-gray-900 text-xl font-bold'>変換後画像</h1>
-    <img class='border border-gray-800' [src]='compareItem.resizedDataUrl' [alt]='"resized image" + i' />
+    <img class='border border-gray-800' [src]='displayItem.resizedDataUrl' [alt]='"resized image" + i' />
   </section>
 </div>
